# i3ipc-glib

./: .gitignore  CHANGELOG.md  Makefile.am  README.md  autogen.sh  configure.ac  i3ipc-glib.spec  meson.build  run-tests.py  test-requirements.txt
debian/: changelog  control  rules
doc/: meson.build
doc/reference/: Makefile.am  i3ipc-glib-docs.xml  meson.build  version.xml.in
examples/: i3ipc-glib-events.c  meson.build
i3ipc/: Makefile.am  Makefile.am.enums  i3ipc-con.c  i3ipc-con.h  i3ipc-connection.c  i3ipc-connection.h  i3ipc-enum-types.h.in  ipc-protocol.h
i3ipc-glib/: Makefile.am  Makefile.am.enums  i3ipc-con-private.h  i3ipc-con.c  i3ipc-con.h  i3ipc-connection.c  i3ipc-connection.h  i3ipc-enum-types.c.in  i3ipc-event-types.c  i3ipc-event-types.h  i3ipc-glib.h  i3ipc-glib.pc.in  i3ipc-reply-types.c  i3ipc-reply-types.h  meson.build
overrides/: Makefile.am
test/: ipctest.py  test_get_bindings_modes.py  test_get_config.py  test_get_marks.py  test_leaves.py  test_restart.py  test_shutdown_event.py  test_ticks.py  test_window.py
